--- a/styles.css/design.css
+++ b/styles.css/design.css
@@ -10,6 +10,7 @@ body {
 }
 
 .banner-div {
+    background-image: url('/posters/banner\ poster.png');
     background-repeat: no-repeat;
     margin: 50px 140px 120px 140px;
     max-width: 1320px;
