--- a/styles.css/design.css
+++ b/styles.css/design.css
@@ -10,8 +10,7 @@ body {
 }
 
 .banner-div {
-    background-image: url('/banner.jpg');
-    background-repeat: no-repeat;
+    background-image: url('/posters/banner.png');
     margin: 50px 140px 120px 140px;
     max-width: 1320px;
     height: 600px;
