--- a/styles.css/design.css
+++ b/styles.css/design.css
@@ -10,6 +10,8 @@ body {
 }
 
 .banner-div {
+    background-image: url('/pictures/picture2.png');
+    background-repeat: no-repeat;
     margin: 50px 140px 120px 140px;
     max-width: 1320px;
     height: 600px;
