--- a/styles.css/design.css
+++ b/styles.css/design.css
@@ -72,7 +72,7 @@ body {
 }
 
 .party {
-    background-image: url('../pictures/picture14.png');
+    background-image: url('../pictures/banners.png');
     max-width: 1320px;
     height: 600px;
     margin: 120px 140px 120px 140px;
@@ -121,6 +121,7 @@ body {
     background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     width: 1320px;
     height: 482px;
+    border-radius: 16px;
     margin-left: 140px;
     margin-bottom: 120px;
 }
