--- a/styles.css/design.css
+++ b/styles.css/design.css
@@ -4,7 +4,8 @@ body {
     font-family: 'Work Sans', sans-serif;
 }
 
-body {
+header,
+main {
     max-width: 1600px;
     margin: 0 auto;
 }
@@ -200,85 +201,206 @@ body {
     border-radius: 463px;
     margin-top: 43px;
 }
-.shop-title{
+
+.shop-title {
     padding-left: 140px;
 }
-.bst{
-color: #F00;
-font-size: 24px;
-font-weight: 500;
-margin: 16px;
+
+.bst {
+    color: #F00;
+    font-size: 24px;
+    font-weight: 500;
+    margin: 16px;
 
 }
-.aws{
-color: #070211;
-font-size: 48px;
-font-weight: 900;
-margin: 22px;
+
+.aws {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    margin: 22px;
 
 }
-.aws-title{
-color: rgba(7, 2, 17, 0.60);
-font-size: 20px;
-font-weight: 400;
-width: 896px;
-margin-bottom: 48px;
+
+.aws-title {
+    color: rgba(7, 2, 17, 0.60);
+    font-size: 20px;
+    font-weight: 400;
+    width: 896px;
+    margin-bottom: 48px;
 
 }
-.first-shoping{
+
+.first-shoping {
     margin-left: 140px;
     border-radius: 16px;
-    
+
 }
-.second-shoping{
+
+.second-shoping {
     margin-left: 140px;
     border-radius: 16px;
 }
-.gap-first{
+
+.gap-first {
     padding-left: 24px;
     padding-bottom: 24px;
 }
-.gap-second{
+
+.gap-second {
     padding-left: 24px;
     padding-bottom: 120px;
 }
-.email-part{
-  background-color: rgba(255, 0, 0, 0.05);
-  border-radius: 16px;
-  width: 1320px;
-  height: 616px;
-  margin-left: 142px;
-  margin-bottom: 120px;
+
+.email-part {
+    background-color: rgba(255, 0, 0, 0.05);
+    border-radius: 16px;
+    width: 1320px;
+    height: 616px;
+    margin-left: 142px;
+    margin-bottom: 120px;
 }
-.news-letter{
+
+.news-letter {
     text-align: center;
 }
-.email-p{
+
+.email-p {
     margin-top: 80px;
     width: 150px;
-   height: 150px;
+    height: 150px;
 }
-.sub{
-color: #070211;
-font-size: 48px;
-font-weight: 900;
-margin-top: 40px;
+
+.sub {
+    color: #070211;
+    font-size: 48px;
+    font-weight: 900;
+    margin-top: 40px;
 }
-.details-part{
-color: rgba(7, 2, 17, 0.60);
-width: 896px;
-font-size: 20px;
-font-weight: 400;
-margin-left: 212px;
-margin-top: 16px;
-margin-bottom: 48px;
+
+.details-part {
+    color: rgba(7, 2, 17, 0.60);
+    width: 896px;
+    font-size: 20px;
+    font-weight: 400;
+    margin-left: 212px;
+    margin-top: 16px;
+    margin-bottom: 48px;
 }
-.sub-title{
+
+.sub-title {
+    display: flex;
+    margin: 0px;
+    border-radius: 0px 50px 50px 0px;
+}
+
+.email-input {
+    background-color: #FFF;
+    border: none;
+    width: 480px;
+    height: 60px;
+    border-radius: 50px 0px 0px 50px;
+    margin-left: 336px;
+}
+
+::placeholder {
+    padding: 25px 0px 25px 30px;
+}
+
+.sub-i {
+    color: #FFF;
+    background-color: #F00;
+    border: none;
+    border-radius: 0px 50px 50px 0px;
+    width: 160px;
+    height: 62px;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.main-foot {
+    background-color: #070211;
+    height: 600px;
+    margin: 0;
+    padding: 0;
 
 }
-.email-input{
+
+.first-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.contact-title {
+   margin-top: 20px;
+}
+
+.big {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 400;
+    width: 375px;
+    height: 80px;
+    margin-top: 30px;
+    margin-left: 140px;
+}
+
+.number {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    margin-right: 291px;
 
 }
-.sub-i{
- 
+
+.domain {
+    color: #FFF;
+    font-size: 24px;
+    font-weight: 500;
+    margin-right: 275px;
+
+}
+
+.first-line {
+    margin: 50px 140px 48px 140px;
+}
+
+.midile-footer {
+    text-align: center;
+}
+
+.fb {
+    margin-right: 24px;
+}
+
+.insta {
+    margin-right: 24px;
+}
+
+.twit {
+    margin-right: 24px;
+}
+
+.second-line {
+    margin: 48px 140px 50px 140px;
+}
+
+.under-footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.all-right {
+    color: #FFF;
+    font-size: 22px;
+    font-weight: 500;
+    margin: 0px 0px 0px 140px;
+}
+
+.un-sub {
+    color: #FFF;
+    font-size: 22px;
+    font-weight: 500;
+    margin: 0px 140px 0px 0px;
+
 }
