--- a/styles.css/design.css
+++ b/styles.css/design.css
@@ -15,8 +15,12 @@ main {
     background-image: url('../pictures/banners.png');
     background-repeat: no-repeat;
     height: 600px;
+  
 }
-
+.banner-div:hover{
+border-radius: 16px;
+background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+} 
 .banner-text {
     color: #FFF;
     text-align: center;
@@ -29,7 +33,10 @@ main {
     font-weight: 400;
     padding-top: 177px;
 }
-
+.happy:hover, .new:hover{
+color: rgb(231, 74, 74);
+text-shadow: 5px 5px 5px black;
+}
 .new {
     color: #FFF;
     font-size: 72px;
@@ -50,6 +57,9 @@ main {
     margin-top: 120px;
     margin-bottom: 48px;
 }
+.offer-title:hover,.first-categorie:hover{
+    text-shadow: 5px 5px 5px black;
+}
 
 .first-categorie {
     color: #F00;
@@ -64,6 +74,10 @@ main {
     font-weight: 700;
     margin-bottom: 48px;
 }
+.second-categorie:hover{
+color: rgb(231, 74, 74);
+text-shadow: 5px 5px 5px black;
+}
 
 .offer-image {
     width: 802.9px;
@@ -71,13 +85,22 @@ main {
     margin-left: 350px;
     margin-bottom: 120px;
 }
-
+.offer-image:hover{
+    background: url(<path-to-image>), rgb(240, 138, 138) 50% / cover no-repeat;
+    
+}
 .party {
-    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);, url('../pictures/banners.png');
+   background-image: url('../pictures/banners.png');
     height: 600px;
     margin-bottom: 120px;
 }
-
+.party:hover{
+    background-image: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    text-shadow: 5px 5px 5px black;
+}
+.party-header:hover, .party-details:hover, .join:hover{
+ color: #FF0000;
+}
 .welcome {
     display: flex;
     justify-content: space-between;
@@ -115,7 +138,9 @@ main {
     padding: 0.008px 0px 0px 0px;
     margin: 68.11px 138px 67.23px 0px;
 }
-
+span{
+    color:#F00;
+}
 .party-address {
     background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
     height: 482px;
@@ -123,21 +148,27 @@ main {
     margin-bottom: 120px;
 }
 
-.address {
+.address{
     text-align: center;
 }
-
+.address-first:hover{
+    color: aquamarine;
+    font-size: 20px;
+}
 .address-first {
     color: #070211;
     font-size: 32px;
     padding-top: 100px;
     padding-bottom: 64px;
 }
-
+.btn:hover{
+    background-color: aquamarine;
+    box-shadow: 5px 5px 5px black;
+}
 .btn {
     color: #FFFFFF;
-    background-color: #F00;
     border: none;
+    background-color: #F00;
     border-radius: 8px;
     padding: 16px 32px;
     font-size: 20px;
@@ -150,7 +181,14 @@ main {
     margin-bottom: 120px;
     justify-content: space-between;
 }
-
+.h3-new:hover, .h1-year:hover {
+ color: aquamarine;
+ text-shadow: 5px 5px 5px black;
+}
+.p-details:hover,.h1-coming:hover, .dolor:hover{
+    color: #F00;
+    text-shadow: 5px 5px 5px black;
+}
 .h3-new {
     color: #F00;
     font-size: 24px;
@@ -197,7 +235,19 @@ main {
     margin-top: 43px;
 }
 
+.bst:hover{
+    color: aquamarine;
+    font-size: 28px;
+    text-shadow: 5px 5px 5px black;
+}
+.aws:hover, .aws-title:hover{
+    color: aquamarine;
+    text-shadow: 5px 5px 5px black;
 
+}
+.first-shoping:hover, .second-shoping:hover{
+ 
+}
 .bst {
     color: #F00;
     font-size: 24px;
@@ -222,9 +272,7 @@ main {
     margin-bottom: 48px;
 
 }
-.shoping-categoire{
-    
-}
+
 .first-shoping{
 border-radius: 16px;
 background-image: url(<path-to-image>), lightgray 0px -35.755px / 100% 142.115% no-repeat;
@@ -250,7 +298,16 @@ gap: 24px;
     margin-top: 120px;
     margin-bottom: 120px;
 }
-
+.email-p:hover{
+    width: 180px;
+    height: 180px;
+}
+.news-letter:hover, .details-part:hover {
+    color: aquamarine;
+}
+.sub-i:hover{
+    background-color: aquamarine;
+}
 .news-letter {
     text-align: center;
 }
@@ -320,9 +377,14 @@ gap: 24px;
     display: flex;
     justify-content: space-between;
 }
-
-.contact-title {}
-
+.big:hover,.number:hover, .domain:hover{
+    color: #F00;
+    font-size: 28px;
+}
+.fb:hover, .insta:hover, .twit:hover, .link:hover{
+    width: 50px;
+    height: 50px;
+}
 .big {
     color: #FFF;
     font-size: 24px;
